<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWindowBackground"
        android:fitsSystemWindows="true"
        tools:context=".ui.MovieDashboardFragment"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fitsSystemWindows="true"
            app:elevation="0dp"
            >
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorWindowBackground"
                app:statusBarScrim="@android:color/transparent"
                app:layout_scrollFlags="scroll|snap">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.85"
                    >
                    <TextView
                        android:id="@+id/textHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="28sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:includeFontPadding="false"
                        android:lineSpacingMultiplier="1.3"
                        android:text="@string/title_home"
                        android:layout_marginTop="56dp"
                        android:layout_marginStart="56dp"
                        android:layout_marginEnd="56dp"
                        app:layout_constraintTop_toTopOf="parent"
                        />
                    <TextView
                        android:id="@+id/action_search"
                        android:textColorHint="@color/colorSearchHint"
                        android:hint="@string/hint_search"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="54dp"
                        android:layout_marginEnd="54dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:gravity="center_vertical"
                        android:drawableStart="@drawable/ic_search"
                        android:drawablePadding="10dp"
                        android:background="@drawable/search_view_background"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginBottom="38dp"
                        app:layout_constraintTop_toBottomOf="@id/textHeader"
                        tools:ignore="Autofill,TextFields"
                        />
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_content"
                    >
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="16dp"
                        android:background="@drawable/bg_dragged_indicator"
                        android:scaleType="centerInside"
                        android:tint="@color/colorDraggedIcon"
                        app:srcCompat="@drawable/ic_more_horiz"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="ContentDescription"
                        />
                    <TextView
                        android:id="@+id/title_recommended"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="38dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="30dp"
                        android:textColor="@android:color/white"
                        android:text="@string/title_recommended_for_you"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:id="@+id/action_see_all_recommended"
                        app:layout_constraintTop_toTopOf="@id/title_recommended"
                        app:layout_constraintBottom_toBottomOf="@id/title_recommended"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="30dp"
                        android:textColor="@android:color/white"
                        android:alpha="0.48"
                        android:text="@string/action_see_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewRecomended"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/title_recommended"
                        />
                    <TextView
                        android:id="@+id/textViewTopRated"
                        app:layout_constraintTop_toBottomOf="@id/recyclerViewRecomended"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="38dp"
                        android:layout_marginStart="30dp"
                        android:textColor="@android:color/white"
                        android:text="@string/title_top_rated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/textViewSeeAllTopRated"
                        app:layout_constraintTop_toTopOf="@id/textViewTopRated"
                        app:layout_constraintBottom_toBottomOf="@id/textViewTopRated"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="30dp"
                        android:textColor="@android:color/white"
                        android:alpha="0.48"
                        android:text="@string/action_see_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewTopRated"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/textViewTopRated"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>